--- a/css/style.css
+++ b/css/style.css
@@ -11,33 +11,52 @@ a {
     color: #b7b8bc;
 }
 
-a:hover {
+.nav-bar a:hover {
     text-decoration: none;
     color: #b73631;
 }
 
-header {
-    background-color: #25252d;
-    height: 20vh;
-}
-
+/*
 header img {
     padding-top: 2em;
 }
-
-header .nav-bar {
+*/
+.contenedor {
+    width: 100%;
+    height: 12vh;
+    background-color: #25252d;
     display: flex;
     align-items: center;
-    justify-content: right;
-    padding-bottom: 2em;
+    justify-content: space-between;
 }
-.nav-bar {
+
+.contenedor .logo {
+    margin: 0 10% 0 10%;
+}
+
+.contenedor .nav-bar {
     display: flex;
     align-items: center;
-    justify-content: right;
-    gap: 2%;
-
+    justify-content: end;
+    margin-right: 10%;
+    gap: 1.5em;
 }
+
+.contenedor  .persona {
+    display: flex;
+    margin-right: -1.2em;
+}
+
+.contenedor .lupa {
+    width: 2%;
+    color: #e2e2e4;
+}
+
+.contenedor svg {
+    color: #e2e2e4;
+    cursor: pointer;
+}
+
 
 
 .seccion-1 {
