--- a/css/style.css
+++ b/css/style.css
@@ -24,17 +24,13 @@ h4 {
     color: #b73631;
 }
 
-
+/* Header */
 .nav-bar a:hover {
     text-decoration: none;
     color: #b73631;
 }
 
-/*
-header img {
-    padding-top: 2em;
-}
-*/
+
 .contenedor {
     width: 100%;
     height: 12vh;
@@ -73,11 +69,11 @@ header img {
 }
 
 
-
+/* Section 1 */
 .seccion-1 {
     display: flex;
     background-color: #212129;
-    padding: 5% 10% 5% 10%;
+    padding: 6% 10% 6% 10%;
 }
 
 .contenedor-texto {
@@ -86,16 +82,26 @@ header img {
 }
 
 
-
-
 .seccion-1 img {
     width: 90%;
 }
 
-
+/* Section 2 */
 .seccion-2 {
-    background-color: white;
+    background-color: #ffffff;
+    display: flex;
+    padding: 6% 10% 6% 10%;
 }
+
+.contenedor-servicios {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.contenedor-interno {
+    border: 1px solid #eee;
+}
+
 
 .seccion-3 {
     background-color: blue;
