--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ img {
     width: 10%;
 }
 
-a, p {
+a,
+p {
     color: #b7b8bc;
 }
 
@@ -16,12 +17,17 @@ h1 {
     color: #fefefe;
 }
 
+h4 {
+    color: #b73631;
+}
+
 button {
     background-color: #e5383a;
 }
 
-h4 {
-    color: #b73631;
+h2,
+h3 {
+    color: #0c0d13;
 }
 
 /* Header */
@@ -53,7 +59,7 @@ h4 {
     gap: 1.5em;
 }
 
-.contenedor  .persona {
+.contenedor .persona {
     display: flex;
     margin-right: -1.2em;
 }
@@ -90,16 +96,72 @@ h4 {
 .seccion-2 {
     background-color: #ffffff;
     display: flex;
-    padding: 6% 10% 6% 10%;
+    padding: 10% 10% 10% 10%;
+    color: #909090;
 }
 
 .contenedor-servicios {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 4em;
+    grid-column-gap: 0em;
 }
 
 .contenedor-interno {
-    border: 1px solid #eee;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+
+}
+
+.contenedor-negro1 {
+    background-color: #212129;
+    padding: 2em 3em 2em 1em;
+    margin-right: 2em;
+}
+
+.contenedor-negro1 svg,
+.contenedor-negro1 h2,
+.contenedor-negro1 h3 {
+    color: #ffffff;
+}
+
+.contenedor-negro2 {
+    background-color: #212129;
+    padding: 2em 3em 2em 1em;
+    margin-right: 2em;
+}
+
+.contenedor-negro2 h2 {
+    color: #ffffff;
+}
+
+.contenedor-negro2 svg,
+.contenedor-negro2 h3 {
+    color: #e5383a;
+}
+
+.contenedor-blanco1 {
+    padding: 2em 3em 2em 1em;
+    margin-right: 2em;
+    margin-bottom: -2em;
+}
+
+.contenedor-blanco1 svg {
+    color: #e5383a;
+}
+
+.contenedor-blanco2 {
+    padding: 2em 3em 2em 1em;
+    margin-top: -2em;
+    margin-right: 2em;
+}
+
+.contenedor-blanco2 svg,
+.contenedor-blanco2 h3 {
+    color: #e5383a;
+}
+
+.contenedor-main_service {
+    margin: 15% 10% 15% 0;
 }
 
 
