--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,30 @@ h3 {
 
 
 .seccion-3 {
-    background-color: blue;
+    display: flex;
+    align-items: center;
+    padding: 7% 10% 7% 10%;
+    background-color: #212129;
 }
+
+.seccion-3 .perfil {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.perfil button {
+    width: 15%;
+    padding: 1em;
+}
+
+.seccion-3 img {
+    width: 90%; 
+    margin-left: 10%;
+}
+
+
+
 
 .seccion-4 {
     background-color: brown;
