Se empezo con la 4ta section

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@
     border: none;
 }
 
-img {
-    width: 10%;
-}
-
 a,
 p {
     color: #b7b8bc;
@@ -34,6 +30,7 @@ h3 {
 .nav-bar a:hover {
     text-decoration: none;
     color: #b73631;
+    transition: color 0.3s;
 }
 
 
@@ -57,6 +54,7 @@ h3 {
     justify-content: end;
     margin-right: 10%;
     gap: 1.5em;
+
 }
 
 .contenedor .persona {
@@ -109,7 +107,6 @@ h3 {
 
 .contenedor-interno {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-
 }
 
 .contenedor-negro1 {
@@ -184,31 +181,69 @@ h3 {
 }
 
 .seccion-3 img {
-    width: 90%; 
+    width: 90%;
     margin-left: 10%;
 }
 
 
 
-
 .seccion-4 {
-    background-color: brown;
+    background-color: #ffffff;
+    padding: 5% 10% 5% 10%;
 }
 
-.seccion-5 {
-    background-color: cadetblue;
+.seccion-4 .galeria {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.seccion-6 {
-    background-color: burlywood;
+.seccion-4 img {
+    width: 90%;
+    height: 90%;
+    margin: 2em;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+
 }
 
-.seccion-7 {
-    background-color: yellowgreen;
+.galeria a img {
+    transition: transform 0.3s;
 }
 
-.seccion-8 {
-    background-color: coral;
+.galeria a:hover img {
+    transform: scale(1.1);
+}
+
+
+.seccion-4 nav {
+    display: inline-block;
+    align-items: center;
+    background-color: #212129;
+    margin-left: 25%;
+}
+
+.seccion-4 .descripcion-proyectos {
+    display: flex;
+}
+
+.seccion-4 .descripcion-proyectos p {
+    width: 40%;
+}
+
+.seccion-4 .nav-galeria a {
+    display: inline-block;
+    padding: 1em;
+    color: #ffffff;
+    background-color: #212129;
+    transition: background-color 0.3s;
+}
+
+.seccion-4 .nav-galeria a:hover {
+    background-color: #e5383a;
+}
+
+.seccion-4 .btn-proyectos {
+  margin-left: 50%;
+  width: 20%;
 }
 
 footer {
