--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,20 @@ h4 {
 
 button {
     background-color: #e5383a;
+    cursor: pointer;
+    color: #fefefe;
+}
+
+button:hover {
+    transition: transform 0.3s;
+    transform: scale(1.1);
+}
+
+header {
+    position: sticky;
+    position: sticky;
+    top: 0;
+    width: 100%;
 }
 
 h2,
@@ -31,6 +45,8 @@ h3 {
     text-decoration: none;
     color: #b73631;
     transition: color 0.3s;
+    transition: transform 0.3s;
+    transform: scale(1.1);
 }
 
 
@@ -41,6 +57,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .contenedor .logo {
@@ -54,7 +71,6 @@ h3 {
     justify-content: end;
     margin-right: 10%;
     gap: 1.5em;
-
 }
 
 .contenedor .persona {
@@ -77,7 +93,15 @@ h3 {
 .seccion-1 {
     display: flex;
     background-color: #212129;
-    padding: 6% 10% 6% 10%;
+    padding: 6% 10% 6% 12%;
+}
+
+.seccion-1 h2 {
+    display: flex;
+    position: absolute;
+    top: 83.7%;
+    left: 3%;
+    color: #e2e2e4;
 }
 
 .contenedor-texto {
@@ -85,9 +109,17 @@ h3 {
     margin-top: 6em;
 }
 
-
 .seccion-1 img {
-    width: 90%;
+    width: 25em;
+    /* Ajusta el tamaño de la imagen según tus necesidades */
+    margin-left: -3em;
+    /* Ajusta el valor según tus necesidades */
+}
+
+.contenedor-imagen {
+    display: inline-block;
+    border: 5px solid #b73631;
+    padding: 1em;
 }
 
 /* Section 2 */
@@ -165,7 +197,7 @@ h3 {
 .seccion-3 {
     display: flex;
     align-items: center;
-    padding: 7% 10% 7% 10%;
+    padding: 7% 12% 7% 10%;
     background-color: #212129;
 }
 
@@ -176,15 +208,32 @@ h3 {
 }
 
 .perfil button {
-    width: 15%;
+    width: 25%;
     padding: 1em;
+    color: #e2e2e4;
 }
+
+
 
 .seccion-3 img {
-    width: 90%;
-    margin-left: 10%;
+    width: 20em;
+    margin-top: -3em;
+    margin-right: -3em;
 }
 
+.seccion-3 h2 {
+    color: #ffffff;
+}
+
+.seccion-3 span {
+    color: #b73631;
+}
+
+.seccion-3 .contenedor-imagen {
+    display: inline-block;
+    border: 5px solid #b73631;
+    padding: 1em;
+}
 
 
 .seccion-4 {
@@ -242,8 +291,8 @@ h3 {
 }
 
 .seccion-4 .btn-proyectos {
-  margin-left: 50%;
-  width: 20%;
+    margin-left: 50%;
+    width: 20%;
 }
 
 footer {
@@ -268,5 +317,4 @@ footer svg {
 .firma span {
     margin-left: 5px;
     color: #e5383a;
-  }
-  
+}
