--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica&family=Noto+Sans+JP:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 * {
     margin: 0;
     text-decoration: none;
     border: none;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 a,
@@ -23,13 +32,7 @@ button {
     color: #fefefe;
 }
 
-button:hover {
-    transition: transform 0.3s;
-    transform: scale(1.1);
-}
-
 header {
-    position: sticky;
     position: sticky;
     top: 0;
     width: 100%;
@@ -109,6 +112,32 @@ h3 {
     margin-top: 6em;
 }
 
+.contenedor-texto svg {
+    display: flex;
+    position: absolute;
+    top: 63.7%;
+    right: 42.5%;
+    transform: rotate(-43deg);
+}
+
+.contenedor-texto svg:hover {
+    top: 63.7%;
+    right: 42.5%;
+}
+
+.contenedor-texto h1 {
+    padding-bottom: .5em;
+}
+
+.contenedor-texto h4 {
+    padding-bottom: .5em;
+}
+
+.contenedor-texto button {
+    margin-top: 1em;
+    padding: 1em 3em 1em 3em;
+}
+
 .seccion-1 img {
     width: 25em;
     /* Ajusta el tamaño de la imagen según tus necesidades */
@@ -130,6 +159,8 @@ h3 {
     color: #909090;
 }
 
+
+
 .contenedor-servicios {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -141,11 +172,18 @@ h3 {
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
+.contenedor-interno h3 {
+    display: flex;
+    position: absolute;
+    padding-top: 1em;
+}
+
 .contenedor-negro1 {
     background-color: #212129;
-    padding: 2em 3em 2em 1em;
+    padding: 2em 3em 4em 1em;
     margin-right: 2em;
 }
+
 
 .contenedor-negro1 svg,
 .contenedor-negro1 h2,
@@ -155,7 +193,7 @@ h3 {
 
 .contenedor-negro2 {
     background-color: #212129;
-    padding: 2em 3em 2em 1em;
+    padding: 2em 3em 4em 1em;
     margin-right: 2em;
 }
 
@@ -174,6 +212,10 @@ h3 {
     margin-bottom: -2em;
 }
 
+.contenedor-blanco1 p {
+    color: black;
+}
+
 .contenedor-blanco1 svg {
     color: #e5383a;
 }
@@ -182,6 +224,10 @@ h3 {
     padding: 2em 3em 2em 1em;
     margin-top: -2em;
     margin-right: 2em;
+}
+
+.contenedor-blanco2 p {
+    color: black;
 }
 
 .contenedor-blanco2 svg,
@@ -193,6 +239,40 @@ h3 {
     margin: 15% 10% 15% 0;
 }
 
+.contenedor-main_service p {
+    color: black;
+}
+
+.contenedor-main_service button {
+    margin-top: 1em;
+    padding: 1em;
+}
+
+.contenedor-main_service svg {
+    display: flex;
+    position: absolute;
+    top: 169%;
+    right: 31.7%;
+    transform: rotate(-43deg);
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.contenedor-hr {
+    width: 5%;
+    border: none;
+    border-top: 1px solid #e5383a;
+    margin: 0 5px;
+}
+
+.contenedor-main_service p {
+    margin: 5% -50% 5% 0;
+}
+
+/* Seccion-3 */
 
 .seccion-3 {
     display: flex;
@@ -207,13 +287,20 @@ h3 {
     width: 90%;
 }
 
+.seccion-3 h4 {
+    padding-top: 1em;
+}
+
+.seccion-3 p {
+    padding-top: 1em;
+}
+
 .perfil button {
+    margin-top: 1em;
     width: 25%;
     padding: 1em;
     color: #e2e2e4;
 }
-
-
 
 .seccion-3 img {
     width: 20em;
@@ -235,23 +322,47 @@ h3 {
     padding: 1em;
 }
 
+.seccion-3 .contenedor-hr {
+    width: 2%;
+}
 
+.perfil svg {
+    display: flex;
+    position: absolute;
+    top: 273%;
+    right: 75.3%;
+    transform: rotate(-43deg);
+
+}
+
+
+/* Seccion 4 */
 .seccion-4 {
     background-color: #ffffff;
     padding: 5% 10% 5% 10%;
 }
 
+.seccion-4 h2 {
+    padding-left: 1.3em;
+}
+
+.seccion-4 .contenedor-hr {
+    width: .5%;
+    margin-left: -8.5em;
+    padding-left: 1em;
+}
+
 .seccion-4 .galeria {
     display: grid;
+    gap: 2em;
     grid-template-columns: repeat(3, 1fr);
 }
 
 .seccion-4 img {
-    width: 90%;
+    width: 100%;
     height: 90%;
-    margin: 2em;
+    margin: 2em -.5em 2em -.5em;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-
 }
 
 .galeria a img {
@@ -268,6 +379,7 @@ h3 {
     align-items: center;
     background-color: #212129;
     margin-left: 25%;
+    margin-top: 1em;
 }
 
 .seccion-4 .descripcion-proyectos {
@@ -275,7 +387,8 @@ h3 {
 }
 
 .seccion-4 .descripcion-proyectos p {
-    width: 40%;
+    width: 50%;
+    margin-top: 1em;
 }
 
 .seccion-4 .nav-galeria a {
@@ -291,21 +404,121 @@ h3 {
 }
 
 .seccion-4 .btn-proyectos {
-    margin-left: 50%;
-    width: 20%;
+    margin-left: 34%;
+    margin-top: 1em;
+    padding: 1em;
+    padding-right: 2em;
 }
 
+.descripcion-proyectos .bi-arrow-right {
+    position: absolute;
+    top: 322.5%;
+}
+
+.descripcion-proyectos .bi-caret-right-fill {
+    position: absolute;
+    top: 318.8%;
+    right: 10%;
+    transform: rotate(-43deg);
+}
+
+/* Seccion 5 */
+
+.seccion-5 {
+    background-color: #25252d;
+    padding: 5% 10% 5% 10%;
+}
+
+.seccion-5 h2 {
+    display: flex;
+    justify-content: center;
+    color: #fefefe;
+    padding: 2% 10% 2% 10%;
+}
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #25252d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    background-color: #ffffff;
+    border: none;
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    background-color: #ffffff;
+    color: #25252d;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+    align-self: center;
+}
+
+input[type="submit"]:hover {
+    background-color: #e5383a;
+    transform: scale(1.1);
+}
+
+form {
+    margin: 0 auto;
+    width: 70%;
+    background-color: #25252d;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    background-color: #ffffff;
+    border: none;
+    margin-bottom: 10px;
+}
+
+input[type="submit"] {
+    background-color: #ffffff;
+    color: #25252d;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+input[type="submit"]:hover {
+    background-color: #e5383a;
+    transform: scale(1.1);
+}
+
+
+/* footer */
 footer {
     background-color: #212129;
     display: flex;
-    padding: 5% 10% 10% 10%;
+    gap: 2em;
+    padding: 10% 10% 5% 10%;
 }
 
 footer svg {
     color: #ffffff;
+    padding: .5em;
+    background-color: #b73631;
+    border-radius: 45%;
+    margin-top: 1em;
 }
 
 
+
+/* firma */
 .firma {
     display: flex;
     justify-content: center;
